# trip-var

./: .env.example  .gitignore  ADVANCED_FEATURES_SUMMARY.md  API_USAGE_GUIDE.md  CICD_FILES_SUMMARY.txt  CI_CD_DOCUMENTATION.md  CI_CD_FINAL_STATUS.md  CI_CD_QUICK_START.md  CI_CD_SETUP.md  CI_CD_SETUP_COMPLETE.md  DEPLOYMENT_SUMMARY.md  LICENSE  PRODUCTION.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_QUICK_START.md  PRODUCTION_READY_SUMMARY.md  RASPBERRY_PI_DEPLOYMENT.md  README.md  TESTING.md  TEST_CI_CD.md  TEST_CLEANUP_SUMMARY.md  TEST_FIXES_GUIDE.md  WEBSTOCK_TEST_STATUS.md  docker-compose.ghcr.yml  docker-compose.prod.yml  docker-compose.quiet.yml  docker-compose.yml  mongo-init.js  mongod.conf  package-lock.json  package.json  test-corb-fix.js  test-docker-networking.sh  view-logs.sh
ai-service/: .env.example  .pylintrc  CHANGELOG.md  Dockerfile  Dockerfile.prod  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py  text_generation.py  usage.py
ai-service/app/: __init__.py  main.py
ai-service/app/api/: __init__.py  auth.py  dependencies.py  generate.py  health.py  routes.py
ai-service/app/core/: config.py  dependencies.py  deps.py  exceptions.py  llm.py  logging.py  logging_config.py  middleware.py  mongodb.py  rate_limit.py  redis.py  security.py
ai-service/app/models/: request_models.py  user.py
ai-service/scripts/: generate_secret.py
ai-service/tests/: .env.test  conftest.py  requirements-test.txt  test_api.py  test_performance.py  test_providers.py
(+802 files in other folders)
